<?xml version="1.0"?>
<package format="2">
  <name>data_recorder</name>
  <version>1.0.0</version>
  <description>The data_recorder package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="martin.scheiber@aau.at">Martin Scheiber</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <license>BSD-2-Clause-License with no commercial use allowed. No license in patents is granted.</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/data_recorder</url> -->


  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- Authors do not have to be maintainers, but could be -->
  <author email="christian.brommer@aau.at">Christian Brommer</author>
  <author email="martin.scheiber@aau.at">Martin Scheiber</author>


  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
  </export>
</package>
